initial localization of app

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1,3 +1,60 @@
 {
-  "helloWorld": "Hallo Welt!"
+  "@@locale": "de",
+  "helloWorld": "Hallo Welt!",
+  "settings": "Einstellungen",
+  "addClub": "Verein hinzufügen",
+  "editClub": "Verein bearbeiten",
+  "clubAlreadyExists": "Dieser Verein ist bereits vorhanden.",
+  "clubAlreadyExistsUpdateCancelled": "Dieser Verein ist bereits vorhanden. Update abgebrochen.",
+  "next": "NÄCHSTE",
+  "last": "LETZTE",
+  "viewAll": "Alle anzeigen",
+  "upcoming": "Anstehend",
+  "table": "Tabelle",
+  "results": "Ergebnisse",
+  "result": "Ergebnis",
+  "loading": "Lädt",
+  "nothingToDisplay": "Nichts anzuzeigen",
+  "matchesPlayed": "Matches gespielt",
+  "name": "Name",
+  "points": "Pkt",
+  "wins": "W",
+  "draws": "D",
+  "losses": "L",
+  "matches": "M",
+  "versus": "VS",
+  "view": "Nuliga",
+  "maps": "Maps",
+  "homeGame": "Heimspiel",
+  "unknown": "Unbekannt",
+  "matchStartsIn": "Spiel startet in",
+  "days": "Tage",
+  "hours": "Std",
+  "minutes": "Min",
+  "seconds": "Sek",
+  "set": "Satz {number}",
+  "leagueUrl": "Liga URL",
+  "matchesUrl": "Spielplan URL",
+  "team": "Verein",
+  "teamShortName": "Team Kürzel",
+  "review": "Überprüfen",
+  "back": "Zurück",
+  "next_button": "Weiter",
+  "leagueOverviewUrl": "Liga Überblick URL",
+  "invalidUrl": "Ungültige URL",
+  "instructions": "Anleitung",
+  "openYourAssociationWebsite": "Öffne die Website deines Verbandes",
+  "exampleAssociationUrl": "Beispiel: https://bwbv-badminton.liga.nu",
+  "navigateToYourLeague": "Navigiere zur Liga deines Vereines",
+  "exampleLeaguePath": "Beispiel: BWBV-Ligen > Landesliga \"Oberrhein\"",
+  "copyUrlAndPasteAbove": "Kopiere die URL und füge sie oben ein",
+  "matchPlanOverallUrl": "Spielplan (Gesamt) URL",
+  "confirmOverwrite": "Überschreiben bestätigen",
+  "confirmOverwriteMatchPlanUrl": "Möchten Sie die aktuelle Spielplan URL wirklich überschreiben?",
+  "cancel": "Abbrechen",
+  "overwrite": "Überschreiben",
+  "generateFromLeagueUrl": "Aus Liga URL generieren",
+  "pleaseEnterLeagueUrlInStep1": "Bitte Liga URL in Schritt 1 eingeben.",
+  "noTeamFound": "Kein Team gefunden",
+  "shortNameMaxLength": "Kürzel darf maximal 7 Zeichen lang sein"
 }
