combine result and results

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -11,8 +11,7 @@
   "viewAll": "Alle anzeigen",
   "upcoming": "Anstehend",
   "table": "Tabelle",
-  "results": "Ergebnisse",
-  "result": "Ergebnis",
+  "resultCount": "{count, plural, =0{Keine Ergebnisse} =1{Ergebnis} other{Ergebnisse}}",  
   "loading": "Lädt",
   "nothingToDisplay": "Nichts anzuzeigen",
   "matchesPlayed": "Matches gespielt",
