--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1,6 +1,5 @@
 {
   "@@locale": "de",
-  "helloWorld": "Hallo Welt!",
   "settings": "Einstellungen",
   "addClub": "Verein hinzufügen",
   "editClub": "Verein bearbeiten",
@@ -8,7 +7,7 @@
   "clubAlreadyExistsUpdateCancelled": "Dieser Verein ist bereits vorhanden. Update abgebrochen.",
   "next": "NÄCHSTE",
   "last": "LETZTE",
-  "viewAll": "Alle anzeigen",
+  "viewAll_button": "Alle anzeigen",
   "upcoming": "Anstehend",
   "table": "Tabelle",
   "resultCount": "{count, plural, =0{Keine Ergebnisse} =1{Ergebnis} other{Ergebnisse}}",  
@@ -22,8 +21,8 @@
   "losses": "L",
   "matches": "M",
   "versus": "VS",
-  "view": "Nuliga",
-  "maps": "Maps",
+  "nuliga_button": "Nuliga",
+  "maps_button": "Maps",
   "homeGame": "Heimspiel",
   "unknown": "Unbekannt",
   "matchStartsIn": "Spiel startet in",
@@ -37,7 +36,7 @@
   "team": "Verein",
   "teamShortName": "Team Kürzel",
   "review": "Überprüfen",
-  "back": "Zurück",
+  "back_button": "Zurück",
   "next_button": "Weiter",
   "leagueOverviewUrl": "Liga Überblick URL",
   "invalidUrl": "Ungültige URL",
@@ -50,9 +49,9 @@
   "matchPlanOverallUrl": "Spielplan (Gesamt) URL",
   "confirmOverwrite": "Überschreiben bestätigen",
   "confirmOverwriteMatchPlanUrl": "Möchten Sie die aktuelle Spielplan URL wirklich überschreiben?",
-  "cancel": "Abbrechen",
-  "overwrite": "Überschreiben",
-  "generateFromLeagueUrl": "Aus Liga URL generieren",
+  "cancel_button": "Abbrechen",
+  "overwrite_button": "Überschreiben",
+  "generateFromLeagueUrl_button": "Aus Liga URL generieren",
   "pleaseEnterLeagueUrlInStep1": "Bitte Liga URL in Schritt 1 eingeben.",
   "noTeamFound": "Kein Team gefunden",
   "shortNameMaxLength": "Kürzel darf maximal 7 Zeichen lang sein"
