implement copilot changes, rename l10n to localization

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -257,7 +257,7 @@
   },
   
   "generateFromLeagueUrl_button": "Generate from League URL",
-  "@generateFromLeagueUrl": {
+  "@generateFromLeagueUrl_button": {
     "description": "Button to auto-generate URL"
   },
   
