fix more copilot suggestions

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -252,7 +252,7 @@
   },
   
   "overwrite_button": "Overwrite",
-  "@overwrite": {
+  "@overwrite_button": {
     "description": "Overwrite button label"
   },
   
